--- a/src/main/resources/templates/fragments/admin/header.html
+++ b/src/main/resources/templates/fragments/admin/header.html
@@ -21,12 +21,12 @@
                 <!-- User Account: style can be found in dropdown.less -->
                 <li class="dropdown user user-menu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                        <img th:src="@{/view/img/user2-160x160.jpg}" class="user-image" alt="User Image">
+                        <img th:src="@{/view/img/logo.png}" class="user-image" alt="User Image">
                     </a>
                     <ul class="dropdown-menu">
                         <!-- User image -->
                         <li class="user-header">
-                            <img th:src="@{/view/img/user2-160x160.jpg}" class="img-circle"
+                            <img th:src="@{/view/img/logo.png}" class="img-circle"
                                  alt="User Image">
 
                             <p>
